second public version

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           
           <h2>Uniqueness</h2>
           <p class="lead">
-                Sure there is many ways to make a time-lapse video. Here is why our approach is unique: 
+                Sure there is many ways to make a time-lapse video. Our approach: 
             </p>
 
 <p class="lead"><strong>Affordable Gadget</strong></p><p>We don't know the final price yet, but our goal is to stay under 100$. Sure you can make awesome stuff with your DSLR, but will you let it sit in your garden for 3 months to capture spring move in? 
@@ -100,6 +100,7 @@
 
 <div class="fb-like" data-href="http://timelapsecube.com" data-send="true" data-width="450" data-show-faces="true"></div>
 
+<h2>What do you think?</h2>
 <div class="fb-comments" data-href="http://www.timelapsecube.com" data-width="270" data-num-posts="10"></div>
         </div><!-- /.span4 -->
       </div><!-- /.row -->
