second public version typo

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
       <div class="featurette">
-        <h2 class="featurette-heading">Building the coolest time-lapse camera ever made.. <span class="muted">It'll blow your mind.</span></h2>
+        <h2 class="featurette-heading">Building the coolest time-lapse camera ever made.. <span class="muted">You'll want one.</span></h2>
         <p class="lead">Imagine an affordable, solar-powered and weather-proof cube that will take a photo every minute, hour or day.</p>
       </div>
 
