--- a/index.html
+++ b/index.html
@@ -70,9 +70,11 @@
         </ul>
 </P>
           <p></p>
+<img src="img/laser_cut.jpg" class="img-circle">
         </div><!-- /.span4 -->
         <div class="span4">
-          <img src="img/laser_cut.jpg" class="img-circle">
+          
+          <img src="img/cn_tower.gif" class="img-circle">
           <h2>Uniqueness</h2>
           <p class="lead">
                 Sure there is many ways to make a time-lapse video. Our approach: 
@@ -101,13 +103,15 @@
 </form>
 
 <!--End mc_embed_signup-->
-
+<hr class="featurette-divider">
 <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://zeitdice.com" data-text="Check out the coolest time-lapse camera." data-via="mschwanzer" data-size="large" data-count="none" data-hashtags="timelapsezeitdice">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-
+<hr class="featurette-divider">
 
 
 <div class="fb-like" data-href="http://timelapsecube.com" data-send="true" data-width="450" data-show-faces="true"></div>
+
+<hr class="featurette-divider">
 
 <h2>What do you think?</h2>
 <div class="fb-comments" data-href="http://www.timelapsecube.com" data-width="270" data-num-posts="10"></div>
