--- a/index.html
+++ b/index.html
@@ -48,11 +48,7 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="span4">
-          
-          
 
-
-          <h2>Use Cases</h2>
           <p class="lead">Things happen too fast for us to realize them. Time-lapse enables exciting insights about change over longer periods of time.  </p>
 
           <p class="lead">
@@ -80,12 +76,12 @@
                 Sure there is many ways to make a time-lapse video. Our approach: 
             </p>
 
-<p class="lead"><strong>Affordable Gadget</strong></p><p>We don't know the final price yet, but our goal is to stay under 100$. Sure you can make awesome stuff with your DSLR, but will you let it sit in your garden for 3 months to capture spring move in? 
+<p class="lead"><strong>Affordable Gadget</strong></p><p>We don't know the final price yet, but our goal is to <strong>stay under 100$</strong>. Sure you can make awesome stuff with your DSLR, but will you let it sit in your garden for 3 months to capture spring move in? 
 </p>
 
-<p class="lead"><strong>Smart Design.</strong></p><p> Besides being solar-powerd to enable long term projects, we chose a <a href="http://en.wikipedia.org/wiki/Rhombicuboctahedron">Rhombicuboctahedron</a> for shape, since you then can tilt the camera almost any way you want it. Also each side will have a socket for your favourite tripod. 
+<p class="lead"><strong>Smart Design.</strong></p><p> Besides being solar-powerd to enable long term projects, we chose a <a href="http://en.wikipedia.org/wiki/Rhombicuboctahedron">Rhombicuboctahedron</a> for shape, since you then can tilt the camera almost any way you want it. Also each side will have a s<strong>ocket for your favourite tripod</strong>. 
 </p>
-<p class="lead"><strong>Easier to use than an actual camera.</strong></p><p>Just 3 settings. Taking photos every minute, hour or day. When you are done, connect it to your computer and upload the project folder to our web app. We will let you kick out frames that you don't want in the final version, apply filters and share the outcome with your friends. 
+<p class="lead"><strong>Easier to use than an actual camera.</strong></p><p><strong>Just 3 settings.</strong> Taking photos every minute, hour or day. When you are done, connect it to your computer and <strong>upload the project folder to our web app</strong>. We will let you kick out frames that you don't want in the final version, apply filters and share the outcome with your friends. 
 </p>
 
 
@@ -103,13 +99,39 @@
 </form>
 
 <!--End mc_embed_signup-->
+
+
+
+<p class="lead"><strong>Status:</strong> Just started prototyping.</p><p>We aim for way better quality than you see in the sample gif. It won't be made out of cardboard either. </p>
+
 <hr class="featurette-divider">
-<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://zeitdice.com" data-text="Check out the coolest time-lapse camera." data-via="mschwanzer" data-size="large" data-count="none" data-hashtags="timelapsezeitdice">Tweet</a>
+
+
+
+
+
+
+<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://zeitdice.com" data-text="Check out the coolest time-lapse camera." data-via="mschwanzer" data-size="large" data-count="none" data-hashtags="zeitdice">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-<hr class="featurette-divider">
 
 
 <div class="fb-like" data-href="http://timelapsecube.com" data-send="true" data-width="450" data-show-faces="true"></div>
+
+<p class="lead">Encourage us to proceed by sharing / liking this page. </p>
+
+
+<hr class="featurette-divider">
+
+<div class="media">
+  <a class="pull-left" href="#">
+    <img src="https://twimg0-a.akamaihd.net/profile_images/1436288805/Screen_shot_2011-07-11_at_12.29.32_AM.png" class="img-circle media-object" width="100">
+  </a>
+  <div class="media-body">
+<p>Feel free to contact <a href="http://michael.schwanzer.info">Michael Schwanzer</a> if you want to help with this project or have questions.</p>
+
+  </div>
+</div>
+
 
 <hr class="featurette-divider">
 
