--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>time.lapse.cube / zeitdice - Building the coolest time-lapse camera.</title>
-        <meta name="description" content="">
+        <title>Time-Lapse Camera - zeitdice</title>
+        <meta name="description" content="Imagine an affordable, solar-powered and weather-proof cube that will take a photo every minute, hour or day.">
         <meta name="viewport" content="width=device-width">
+        <meta property="og:image" content="http://www.zeitdice.com/img/cn_tower.gif" />
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
 
@@ -39,7 +40,7 @@
 
       <div class="featurette">
         <h2 class="featurette-heading">Building the coolest time-lapse camera ever made.. <span class="muted">You'll want one.</span></h2>
-        <p class="lead">Imagine an affordable, solar-powered and weather-proof cube that will take a photo every minute, hour or day.</p>
+        <p class="lead">Imagine affordable, solar-powered and weather-proof dice that will take a photo every minute, hour or day.</p>
       </div>
 
       <hr class="featurette-divider">
