--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
 
-<div class="fb-like" data-href="http://timelapsecube.com" data-send="true" data-width="450" data-show-faces="true"></div>
+<div class="fb-like" data-href="http://www.zeitdice.com" data-send="true" data-width="450" data-show-faces="true"></div>
 
 <p class="lead">Encourage us to proceed by sharing / liking this page. </p>
 
