--- a/index.html
+++ b/index.html
@@ -108,10 +108,6 @@
 <hr class="featurette-divider">
 
 
-
-
-
-
 <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://zeitdice.com" data-text="Check out the coolest time-lapse camera." data-via="mschwanzer" data-size="large" data-count="none" data-hashtags="zeitdice">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
@@ -128,7 +124,7 @@
     <img src="https://twimg0-a.akamaihd.net/profile_images/1436288805/Screen_shot_2011-07-11_at_12.29.32_AM.png" class="img-circle media-object" width="100">
   </a>
   <div class="media-body">
-<p>Feel free to contact <a href="http://michael.schwanzer.info">Michael Schwanzer</a> if you want to help with this project or have questions.</p>
+<p>Feel free to contact <a href="http://michael.schwanzer.info">Michael Schwanzer</a> if you want to help with this project or have questions. Read more on the <a href="http://michael.schwanzer.info/blog/?s=time-lapse&submit=Search">blog</a>.</p>
 
   </div>
 </div>
