--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
       <div class="featurette">
-        <h2 class="featurette-heading">Building the coolest time-lapse camera ever made.. <span class="muted">You'll want one.</span></h2>
+        <h2 class="featurette-heading">Tweet it and we print it. <span class="muted">On a typewriter!</span></h2>
         <p class="lead">Imagine affordable, solar-powered and weather-proof dice that will take a photo every minute, hour or day.</p>
       </div>
 
@@ -108,11 +108,11 @@
 <hr class="featurette-divider">
 
 
-<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://zeitdice.com" data-text="Check out the coolest time-lapse camera." data-via="mschwanzer" data-size="large" data-count="none" data-hashtags="zeitdice">Tweet</a>
+<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://lepetiteprintshop.com" data-text="Check out the coolest time-lapse camera." data-via="printtypewriter" data-size="large" data-count="none" data-hashtags="printtypewriter">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
 
-<div class="fb-like" data-href="http://www.zeitdice.com" data-send="true" data-width="450" data-show-faces="true"></div>
+<div class="fb-like" data-href="http://www.lepetiteprintshop.com" data-send="true" data-width="450" data-show-faces="true"></div>
 
 <p class="lead">Encourage us to proceed by sharing / liking this page. </p>
 
