--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Time-Lapse Camera - zeitdice</title>
+        <title>Tweet it and we print it. On a typewriter - Le Petite Print Shop</title>
         <meta name="description" content="Imagine an affordable, solar-powered and weather-proof cube that will take a photo every minute, hour or day.">
         <meta name="viewport" content="width=device-width">
         <meta property="og:image" content="http://www.zeitdice.com/img/cn_tower.gif" />
